--- a/Llama_2_colab.ipynb
+++ b/Llama_2_colab.ipynb
@@ -385,6 +385,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "From tutorial here:\n",
+        " https://github.com/MuhammadMoinFaisal/LargeLanguageModelsProjects/blob/main/Run%20Llama2%20Google%20Colab/Llama_2.ipynb"
+      ],
+      "metadata": {
+        "id": "Q3O6yoHK2KTc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "The Llama 2 is a collection of pretrained and fine-tuned generative text models, ranging from 7 billion to 70 billion parameters, designed for dialogue use cases."
       ],
       "metadata": {
@@ -457,7 +467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -795,7 +805,7 @@
       "metadata": {
         "id": "qJ90LnMv54Y-"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -815,7 +825,7 @@
       "metadata": {
         "id": "Ak3ZtGjM6Wdp"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -826,7 +836,7 @@
       "metadata": {
         "id": "85XOzmui6rGN"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -864,7 +874,7 @@
         "id": "qBgdGV4b6MxG",
         "outputId": "d3b92888-4b1b-4815-8432-93966da2cc08"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -910,7 +920,7 @@
         "id": "irftToUj6aWt",
         "outputId": "297a0f81-f236-46a8-defd-7334620e3745"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -934,7 +944,7 @@
         "id": "YG4Pylz662At",
         "outputId": "3291c10a-31ad-4e4c-ffa0-1da359b7c3a9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -971,7 +981,7 @@
       "metadata": {
         "id": "RfzwELMC7Dyg"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -997,7 +1007,7 @@
         },
         "outputId": "bd85a115-0abe-4f92-8f9f-7bf50c3b519f"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1020,7 +1030,7 @@
         "id": "jlJ1JgR68DDO",
         "outputId": "6d405846-21a4-4243-fa2d-f99a4df4436d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1043,7 +1053,7 @@
         "id": "Qona58gX8oAn",
         "outputId": "4dc828c9-4fc8-4f52-d24b-65cdcb0668e8"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1092,6 +1102,13 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "uN5X4PKu2JKe"
+      }
     }
   ]
 }
