--- a/RAG_Llama2_Chroma_Colab_v1.ipynb
+++ b/RAG_Llama2_Chroma_Colab_v1.ipynb
@@ -5782,6 +5782,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Based on Tutorial from: https://www.youtube.com/watch?v=nac0nVBO24w"
+      ],
+      "metadata": {
+        "id": "IJHz0Oj8QYWR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#Install Required Packages"
       ],
       "metadata": {
@@ -6495,24 +6504,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "GG's personal HF token to use for login cell below: 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"
-      ],
-      "metadata": {
-        "id": "7Xq4CyOeGW3A"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "use this for now: hf_tPijqvaCKVoSwscgqvUMLLLcrchBzSXQK"
-      ],
-      "metadata": {
-        "id": "JUUXssXOIzv8"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "notebook_login()"
@@ -6773,13 +6764,24 @@
     {
       "cell_type": "code",
       "source": [
-        "#Create our Q/A Chain - w/o k param\n",
+        "#Create our Q/A Chain - w/o k param is better?\n",
         "pdf_qa=ConversationalRetrievalChain.from_llm(llm=llm,\n",
         "                                             retriever=vectordb.as_retriever(),\n",
         "                                             verbose=False, memory=memory)"
       ],
       "metadata": {
         "id": "qBQxOiZrMcXm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result=pdf_qa({\"What is Tivdak used for?\"})"
+      ],
+      "metadata": {
+        "id": "gxxe6XNYKN4j"
       },
       "execution_count": null,
       "outputs": []
@@ -6806,17 +6808,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "result=pdf_qa({\"What is Tivdak used for?\"})"
-      ],
-      "metadata": {
-        "id": "gxxe6XNYKN4j"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
