--- a/RAG_Llama2_Chroma_Colab_v1.ipynb
+++ b/RAG_Llama2_Chroma_Colab_v1.ipynb
@@ -6571,7 +6571,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Step 8: Download the Llama 2 7B Chat Model**"
+        "#Download the Llama 2 7B Chat Model"
       ],
       "metadata": {
         "id": "1Mqr0HMBOz6H"
@@ -6711,7 +6711,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Step 10: Creating a memory object which is necessary to track inputs/outputs and hold a conversation**"
+        "#Creating a memory object which is necessary to track inputs/outputs and hold a conversation"
       ],
       "metadata": {
         "id": "5nyLvxUCSf6o"
@@ -6731,7 +6731,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Step 11: Creating a Conversation Retrieval QA Chain**"
+        "#Creating a Conversation Retrieval QA Chain"
       ],
       "metadata": {
         "id": "vaaKQ07wTJZw"
